--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 # MongoDB Configuration
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=password123
-MONGO_INITDB_DATABASE=myapp
+MONGO_INITDB_DATABASE=TMS
+MONGO_HOST=localhost
+MONGO_PORT=27017
 
 # MongoDB Express Configuration
 ME_CONFIG_MONGODB_ADMINUSERNAME=admin
