--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,7 +41,7 @@ repos:
     rev: 6.1.0
     hooks:
       - id: flake8
-        args: [--max-line-length=120, --extend-ignore=E203, W503]
+        args: ["--max-line-length=120", "--extend-ignore=E203,W503"]
         additional_dependencies:
           - flake8-docstrings
           - flake8-bugbear
@@ -61,7 +61,6 @@ repos:
       - id: bandit
         args: [-r, src]
         exclude: tests/
-
   # Dockerfile linting
   - repo: https://github.com/hadolint/hadolint
     rev: v2.12.0
@@ -82,7 +81,7 @@ repos:
     rev: v2.9.0
     hooks:
       - id: pip-audit
-        args: [--require-hashes, --disable-pip]
+        additional_dependencies: ["requests==2.32.4"]
 
   # Commit message formatting
   - repo: https://github.com/commitizen-tools/commitizen
