--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,10 +2,12 @@
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
-black==23.11.0
+black==24.3.0
 flake8==6.1.0
 isort==5.12.0
 mypy==1.7.1
 pre-commit==3.6.0
 bandit==1.7.5
 faker==37.3.0
+requests==2.32.4
+setuptools==78.1.1
