--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,30 +21,13 @@ repos:
       - id: mixed-line-ending
         args: ["--fix=lf"]
 
-  # Python code formatting
-  - repo: https://github.com/psf/black
-    rev: 25.1.0
+  # Python code formatting & linting with Ruff
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.11.13
     hooks:
-      - id: black
-        args: [--line-length=120]
-
-  # Python import sorting
-  - repo: https://github.com/pycqa/isort
-    rev: 6.0.1
-    hooks:
-      - id: isort
-        args: [--profile=black, --line-length=120]
-
-  # Python linting
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.2.0
-    hooks:
-      - id: flake8
-        args: ["--max-line-length=120", "--extend-ignore=E203,W503"]
-        additional_dependencies:
-          - flake8-docstrings
-          - flake8-bugbear
-          - flake8-comprehensions
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+      - id: ruff-format
 
   # Python type checking
   - repo: https://github.com/pre-commit/mirrors-mypy
